fix chat scroll, hide overflow

--- a/code/client/src/index.css
+++ b/code/client/src/index.css
@@ -173,7 +173,7 @@ body {
   margin-bottom: 2.5%;
   overflow: scroll;
   padding: 15px;
-  
+  overflow-x: hidden;
   /* overflow: hidden; */
 }
 
